--- a/force-app/main/default/classes/STO_SurveyHelper.cls
+++ b/force-app/main/default/classes/STO_SurveyHelper.cls
@@ -1,7 +1,7 @@
 public without sharing class STO_SurveyHelper {
     @AuraEnabled(cacheable=true)
     public static String getSurveyLink(Id caseId) {
-        return [SELECT InvitationLink FROM SurveyInvitation WHERE Case__c = :caseId LIMIT 1]?.InvitationLink;
+        return [SELECT InvitationLink FROM SurveyInvitation WHERE Name = :caseId LIMIT 1]?.InvitationLink;
     }
 
     @invocableMethod(label='Generate SurveyInvitationLink')
