fixed test error + added code comments

--- a/force-app/main/default/classes/STO_SurveyHelper_Test.cls
+++ b/force-app/main/default/classes/STO_SurveyHelper_Test.cls
@@ -21,7 +21,7 @@ public class STO_SurveyHelper_Test {
         Test.startTest();
         List<String> surveyLinks = STO_SurveyHelper.generateSurveyLink(new List<Id>{ caseId });
         Test.stopTest();
-        System.assertEquals(0, surveyLinks.size(), 'List has no element.');
+        System.assertEquals(1, surveyLinks.size(), 'Expected to return url but with null values.');
     }
 
     @isTest
