--- a/force-app/main/default/classes/BTO_AssignBatchTest.cls
+++ b/force-app/main/default/classes/BTO_AssignBatchTest.cls
@@ -17,18 +17,10 @@ public with sharing class BTO_AssignBatchTest {
         insert u;
         ServiceResource s = new ServiceResource(RelatedRecordId = u.Id, IsActive = true, name = 'testy');
         insert s;
-        Skill arbeidSkill = [SELECT Id FROM Skill WHERE DeveloperName = 'Arbeid' LIMIT 1];
-        ServiceResourceSkill sk = new ServiceREsourceSkill(
-            ServiceResourceId = s.Id,
-            SkillId = arbeidSkill.Id,
-            SkillLevel = 1,
-            EffectiveStartDate = Date.today().addDays(-1)
-        );
-        insert sk;
     }
 
     @IsTest
-    static void testBTOAssign() {
+    static void testNotAssignEmptySR() {
         Test.startTest();
         Database.executeBatch(new BTO_AssignBatch('Standard User'));
         Test.stopTest();
@@ -39,6 +31,27 @@ public with sharing class BTO_AssignBatchTest {
                 ServiceResource.RelatedRecord.Profile.Name LIKE 'Standard User'
                 AND Skill.DeveloperName IN ('STO', 'BTO')
         ];
-        System.assertEquals(2, skills.size(), 'User did not get assigned both STO and BTO skills');
+        System.assertEquals(0, skills.size(), 'A user without any STO skills was assigned new skills.');
+    }
+
+    @IsTest
+    static void testBTOAssign() {
+        List<sObject> testSR = [
+            SELECT Id
+            FROM ServiceResource
+            WHERE RelatedRecord.lastName = 'testy' AND RelatedRecord.username = 'marihone@testy.com'
+            LIMIT 1
+        ];
+        Test.startTest();
+        new BTO_AssignBatch('Standard User').execute(null, testSR);
+        Test.stopTest();
+        List<ServiceResourceSkill> skills = [
+            SELECT Id
+            FROM ServiceResourceSkill
+            WHERE
+                ServiceResource.RelatedRecord.Profile.Name LIKE 'Standard User'
+                AND Skill.DeveloperName IN ('STO', 'BTO')
+        ];
+        System.assertEquals(2, skills.size(), 'User was not assigned new STO/BTO skills');
     }
 }
