--- a/force-app/main/default/classes/STO_SurveyHelper_Test.cls
+++ b/force-app/main/default/classes/STO_SurveyHelper_Test.cls
@@ -18,8 +18,14 @@ public class STO_SurveyHelper_Test {
     @isTest
     static void testGenerateSurveyLink() {
         Id caseId = [SELECT Id FROM Case LIMIT 1]?.Id;
+        STO_SurveyHelper.SurveyInvocableParameters parameters = new STO_SurveyHelper.SurveyInvocableParameters();
+        parameters.surveyDeveloperName = 'test_survey';
+        parameters.caseId = caseId;
+
         Test.startTest();
-        List<String> surveyLinks = STO_SurveyHelper.generateSurveyLink(new List<Id>{ caseId });
+        List<String> surveyLinks = STO_SurveyHelper.generateSurveyLink(
+            new List<STO_SurveyHelper.SurveyInvocableParameters>{ parameters }
+        );
         Test.stopTest();
     }
 
