Added BTO to entitlement process

--- a/force-app/main/default/classes/STO_CaseMilestoneHandler.cls
+++ b/force-app/main/default/classes/STO_CaseMilestoneHandler.cls
@@ -1,9 +1,14 @@
 global without sharing class STO_CaseMilestoneHandler extends MyTriggers {
     private static final String RESPOND_STO_TYPE_NAME = 'Respond STO';
+    private static final String RESPOND_BTO_TYPE_NAME = 'Respond BTO';
     private static final String HANDLING_TIME_TYPE_NAME = 'Handling Time';
-    private static final Set<String> milestoneTypes = new Set<String>{ RESPOND_STO_TYPE_NAME, HANDLING_TIME_TYPE_NAME };
+    private static final Set<String> milestoneTypes = new Set<String>{
+        RESPOND_STO_TYPE_NAME,
+        RESPOND_BTO_TYPE_NAME,
+        HANDLING_TIME_TYPE_NAME
+    };
     private static final Set<String> triggerStatuses = new Set<String>{ 'On Hold', 'Forwarded', 'Closed' };
-    private static LoggerUtility logger = new LoggerUtility('STO Milestones');
+    private static LoggerUtility logger = new LoggerUtility('STO/BTO Milestones');
     private static final CRM_ApplicationDomain.Domain domain = CRM_ApplicationDomain.Domain.NKS;
 
     global override void onBeforeUpdate(Map<Id, sObject> triggerOldMap) {
@@ -13,8 +18,8 @@ global without sharing class STO_CaseMilestoneHandler extends MyTriggers {
         for (Case casy : (List<Case>) Trigger.new) {
             Case oldRecord = (Case) triggerOldMap.get(casy.Id);
             if (
-                casy.Origin == 'STO' &&
-                triggerStatuses.contains(casy.Status) &&
+                casy.Origin == 'STO' ||
+                casy.origin == 'BTO' && triggerStatuses.contains(casy.Status) &&
                 MyTriggers.hasChangedFields(fieldNamesToCheck, casy, oldRecord)
             ) {
                 casesToHandle.put(casy.Id, casy);
@@ -40,8 +45,11 @@ global without sharing class STO_CaseMilestoneHandler extends MyTriggers {
         for (CaseMilestone caseMile : milestoneList) {
             Case milestoneCase = casesToHandle.containsKey(caseMile.CaseId) ? casesToHandle.get(caseMile.CaseId) : null;
             if (milestoneCase != null && milestoneCase.Status == 'Forwarded') {
-                //Only close handling time milestone, response time is still initial as end user is still awaiting the "full" response
-                caseMile.CompletionDate = caseMile.MilestoneType.Name == 'Respond STO' ? null : complTime;
+                // Only close handling time milestone, response time is still initial as end user is still awaiting the "full" response
+                caseMile.CompletionDate = caseMile.MilestoneType.Name == 'Respond STO' ||
+                    caseMile.MilestoneType.Name == 'Respond BTO'
+                    ? null
+                    : complTime;
             } else {
                 if (!Test.isRunningTest())
                     caseMile.CompletionDate = complTime;
@@ -50,7 +58,7 @@ global without sharing class STO_CaseMilestoneHandler extends MyTriggers {
             if (caseMile.CompletionDate != null || Test.isRunningTest()) {
                 repDataList.add(
                     new ReportingData__c(
-                        CRM_Category__c = 'STO',
+                        CRM_Category__c = milestoneCase?.Origin,
                         STO_Category__c = milestoneCase?.STO_Category__c,
                         STO_MilestoneId__c = caseMile.Id,
                         CRM_NavUnitNumber__c = milestoneCase?.STO_Owner_Department__c
